trunk/tests/jastadd/negative/name_errors/L1/4_AssignmentToConst.ob
MODULE TestModule;
	CONST c = 1;
BEGIN
	c := c + 1
END TestModule.
